tests/negative/test_decl_bad_id.orb
fnc main() {
    i32 x = 100;
    u64 ret = 200;
}